--- a/templates/partials/toplinks.hbs
+++ b/templates/partials/toplinks.hbs
@@ -1,6 +1,6 @@
  <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>weather app </title>
+        <title>weather appd </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="images/02.png" type="image/png">
